--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- content -->
+ <div class="image">
+     <!-- main content-->
+        <div class="main text">
+            <h1>Hallo meine libe Frau</h1>
+           <p>ich libe dich </p> 
+        </div>
     
+     <!-- side content -->
+       <aside>
+        <div>
+            <img src="image/IMG_4784.jpg" alt="Libe">
+        </div>
+       </aside> 
+</div>
+    <script src="js/script.js"></script>
 </body>
 </html>
